EWLJ-324: adds top padding to the references scripts to fix spacing

--- a/styleguide/source/assets/scss/05-pages/_article.scss
+++ b/styleguide/source/assets/scss/05-pages/_article.scss
@@ -34,3 +34,7 @@
   @include gutter($margin-bottom-full...);
   background-color: $white;
 }
+
+.joe__page-content--article {
+  padding-top: 5px;
+}
